Tue Oct  7 19:31:05 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DdsDcps.mpc:

          No need to run dcps_ts.pl on DdsDcpsGuid.idl, tao_idl generates all
          the code that's actually used for the Guid type.

Tue Oct  7 14:28:59 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.inl:
        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fixed misspelled variable name.

Mon Oct  6 22:22:34 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

          Merged the Federation branch back onto the trunk.  This feature
          branch developed the basic infrastructure to support federation
          of multiple repositories.  This feature is intended to provide
          fault-tolerant capabilities to the DCPSInfoRepo service
          meta-data repositories.  Details of the development can be
          found in the file 'history/ChangeLog-Federation'.

          See the file 'DDS_release_notes.txt' for a description
          of changes made that affect the user API to OpenDDS.
          Briefly, these changes include: removal of domain_ids domain
          specification files; extension of internal Id values from 32
          to 128 bits; ability to federate multiple repositories for
          distributed operation.

        * DDS_release_notes.txt:
        * DevGuideExamples/DCPS/Messenger/run_corbaloc_test.pl:
        * DevGuideExamples/DCPS/Messenger/run_ns_test.pl:
        * DevGuideExamples/DCPS/Messenger/run_test.pl:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/run_test.pl:

        * dds/DCPS/BuiltInTopicUtils.h:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderRemoteImpl.h:
        * dds/DCPS/DataReaderRemoteImpl.cpp:
        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/DataSampleHeader.cpp: