@@ -1,3 +1,15 @@
+Wed Oct  8 14:09:18 UTC 2008  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/SubscriberImpl.cpp:
+
+          Added required #include.
+
+        * dds/DCPS/GuidUtils.cpp:
+        * dds/InfoRepo/GuidGenerator.cpp:
+
+          Added static_cast<> around numeric narrowing conversions.  This
+          silences warnings from some compilers.
+
 Tue Oct  7 19:31:05 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DdsDcps.mpc:
